# ffbir

./: .fpm  Cargo.toml  LICENSE.md  README.md  justfile
src/: main.rs
