[package]
name = "ffbir"
version = "0.3.0"
edition = "2021"
authors = ["underthefoxtree"]
description = "fetch all your fetches, but in rust"
readme = "README.md"
repository = "https://github.com/underthefoxtree/ffbir"
license = "MIT"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.0.0"
which = "4.4.0"
